Move hotel search into booking API
